--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,24 +1,30 @@
-name: Docs
-on: [push, pull_request, workflow_dispatch]
-permissions:
-    contents: write
-jobs:
-  docs:
+name: Build-sphinx-docs
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+jobs: 
+  build: 
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-      - name: Install dependencies
-        run: |
-          pip install sphinx sphinx-press-theme
-      - name: Sphinx build
-        run: |
-          sphinx-build docs _build
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+      - uses: actions/checkout@v2
+
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v2
         with:
-          publish_branch: gh-pages
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: _build/
-          force_orphan: true
+           python-version: "3.10"
+        
+      - name: Install dependencies
+        run: | 
+          python -m pip install --upgrade pip
+          pip install sphinx sphinx-press-theme
+      - name: Build HTML
+        run: | 
+          cd docs/
+          make html
+      - name: Run ghp-import
+        run: | 
+          ghp-import -n -p -f docs/_build/html
