--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,21 +1,24 @@
-name: Deploy Sphinx documentation to Pages
-
-on:
-  push:
-    branches: [main] # branch to trigger deployment
-
+name: Docs
+on: [push, pull_request, workflow_dispatch]
+permissions:
+    contents: write
 jobs:
-  pages:
-    runs-on: ubuntu-20.04
+  docs:
+    runs-on: ubuntu-latest
     steps:
-    - name: Install dependencies
-      run: | 
-         pip install sphinx-press-theme
-    - id: deployment
-      uses: sphinx-notes/pages@v3
-      with:
-        publish: false
-    - uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ${{ steps.deployment.outputs.artifact }}
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
+      - name: Install dependencies
+        run: |
+          pip install sphinx sphinx-press-theme ghp-import pytest
+      - name: Sphinx build
+        run: |
+          sphinx-build docs _build
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+        with:
+          publish_branch: gh-pages
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: _build/
+          force_orphan: true
