--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -13,7 +13,8 @@ jobs:
           pip install sphinx sphinx-press-theme ghp-import pytest
       - name: Sphinx build
         run: |
-          sphinx-build docs _build
+          cd docs
+          make clean html
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
